Fixed Align

--- a/static/CyanisNice/NewStyle.css
+++ b/static/CyanisNice/NewStyle.css
@@ -501,7 +501,6 @@ body {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
 }
 
